<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Tod</string>

    <string name="donate_video">ca-app-pub-4823007655976335/9197631201</string>
    <string name="donate_banner">ca-app-pub-4823007655976335/2453093604</string>
    <string name="donate_gecis">ca-app-pub-4823007655976335/5406560006</string>

    <string name="title_activity_search">Search</string>
    <string name="title_activity_new_post">New Post</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_reset_pass">Reset Password</string>
    <string name="title_activity_register">Register</string>
    <string name="title_activity_login">Login</string>

    <string name="search_book">Search Book..</string>
    <string name="search_author">Search Author..</string>
    <string name="lorem">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean nec condimentum ante, quis mattis mi. Proin ut rhoncus libero, ac euismod neque. Ut suscipit, enim a facilisis consequat, orci lacus venenatis orci, at ultricies orci nulla sed ex. In condimentum viverra velit, eget feugiat libero imperdiet vel. Aenean pretium, lectus vitae bibendum bibendum, diam turpis convallis eros, quis tristique leo sapien at ipsum. Praesent eu odio id nulla lobortis auctor.</string>
    <string name="hint_comment">Write about book..</string>
    <string name="comment_text">Send</string>
    <string name="delete_account">Are you sure want to delete your account?</string>
    <string name="dialog_yes">Yes</string>
    <string name="dialog_no">No</string>

    <string name="hint_username">Username</string>
    <string name="hint_name">Name</string>
    <string name="hint_surname">Surname</string>
    <string name="hint_password">Password</string>
    <string name="hint_new_pass">New Password</string>
    <string name="hint_confirm_pass">Confirm Password</string>
    <string name="hint_email">E-mail</string>

    <string name="sign_in">Sign In</string>
    <string name="remember_me">Remember Me</string>
    <string name="register">Sign Up</string>

    <!-- buttons -->
    <string name="btn_forgot_password">Forgot your password?</string>
    <string name="btn_link_to_register">Not a member? Get registered now!</string>
    <string name="btn_link_to_login">Already registered. Login Me!</string>
    <string name="btn_reset_pass">Reset Password</string>
    <string name="btn_back"><![CDATA[<< Back]]></string>
    <string name="btn_change_pass">Update Password</string>
    <string name="btn_change_password">Change Password</string>
    <string name="btn_sign_out">Sign Out</string>
    <string name="btn_remove_user">Remove Account</string>

    <!-- user profile tablayout sections -->
    <string name="heading_reading">Reading</string>
    <string name="heading_readed">Readed</string>
    <string name="heading_wanttoread">Want to Read</string>


    <string name="lbl_forgot_pass">Forgot password?</string>
    <string name="msg_forgot_pass">We just need your registered Email to sent you password reset instructions.</string>

    <!-- static strings -->
    <string name="stc_book">Book Name</string>
    <string name="stc_author">Author Name</string>
    <string name="stc_publisher">Publisher</string>
    <string name="stc_page">Page</string>

    <!-- required comment -->
    <string name="required">REQUIRED</string>

    <!-- progress comment -->
    <string name="profile_picture">Profile Picture</string>
    <string name="uploading">Uploading..</string>

    <!-- alert comment -->
    <string name="move_book_to">Move to..</string>
    <string name="vote_book">Vote!!</string>

    <!-- menu comment -->
    <string name="menu_item_profile">Profile</string>
    <string name="menu_item_short">Short</string>
    <string name="menu_item_setting">Setting</string>
    <string name="menu_item_search">Search</string>
    <string name="menu_item_app">About Tod</string>

    <!-- snackbar comment -->
    <string name="no_internet_connection">No Internet Connection!</string>
    <string name="failed_load_post">Failed to load book</string>
    <string name="failed_sign_in">Sign In Failed</string>
    <string name="posting">Posting..</string>
    <string name="failed_fetch_user">Error: could not fetch user.</string>
    <string name="too_short_pass">Password too short, enter minimum 6 characters!</string>
    <string name="send_reset_pass">We have sent you instructions to reset your password!</string>
    <string name="failed_reset_email">Failed to send reset to your email!</string>
    <string name="updated_pass">Password is updated, sign in with new password!</string>
    <string name="failed_update_pass">Failed to update password!</string>
    <string name="enter_pass">Enter password</string>
    <string name="profile_deleted">Your profile is deleted:( Take care of you!</string>
    <string name="failed_delete_acoount">Failed to delete your account!</string>
    <string name="updated_profile_image">Updated your profile picture</string>
    <string name="failed_update_image">Failed: Picture must to max. 2mb</string>
    <string name="failed_update_img">Something get wrong! Try again</string>
    <string name="moved_readed">Moved to Readed</string>
    <string name="moved_reading">Moved to Reading</string>
    <string name="moved_wtread">Moved to Want to Read</string>
    <string name="removed_from_list">Removed from List</string>
    <string name="thank_for_donate">Thanks for support!</string>

    <!-- short book comment -->
    <string name="lates_added">Latest Added</string>
    <string name="top_readed">Top Readed</string>

    <string name="readed_check">Readed</string>
    <string name="reading_check">Reading</string>
    <string name="wtread_check">Want to Read</string>
    <string name="expand_text">Show more</string>
    <string name="collapse_text">Show less</string>
    <string name="no_permission">No permission!</string>
    <string name="hint_book_note">My notes..</string>
    <string name="hint_book_note_dialog">You can write about book on this area..</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="more_app">For more Mirrket App</string>
    <string name="input_user_name">New user name..</string>
    <string name="null_user_name">Username can not be blank!</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="openDrawer">open_drawer</string>
    <string name="closeDrawer">close_drawer</string>

    <!-- Navigation Drawer menu labels -->
    <string name="nav_home">Books</string>
    <string name="nav_authors">Authors</string>
    <string name="nav_categories">Categories</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_others">Others</string>

    <!-- Toolbar titles when navigation menu item is selected -->
    <string-array name="nav_item_activity_titles">
        <item>Books</item>
        <item>Authors</item>
        <item>Categories</item>
        <item>Settings</item>
    </string-array>

    <string name="activity_title_about_us">About Us</string>
    <string name="activity_title_donate">Donate</string>
</resources>