<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_nav_books"
            android:title="@string/nav_home" />
        <item
            android:id="@+id/nav_authors"
            android:icon="@drawable/ic_nav_authors"
            android:title="@string/nav_authors" />
        <item
            android:id="@+id/nav_categories"
            android:icon="@drawable/ic_nav_categories"
            android:visible="false"
            android:title="@string/nav_categories" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_nav_settings"
            android:title="@string/nav_settings" />

    </group>

    <item android:title="@string/nav_others">
        <menu>
            <item
                android:id="@+id/nav_about_us"
                android:title="@string/activity_title_about_us" />
            <item
                android:id="@+id/nav_donate"
                android:title="@string/activity_title_donate" />
        </menu>
    </item>

</menu>
