<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".activity.MainActivity">

    <item
        android:id="@+id/action_search"
        android:icon="@drawable/ic_action_search"
        android:title="@string/menu_item_search"
        android:visible="true"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_sort"
        android:icon="@drawable/ic_sorting_answers"
        android:title="@string/menu_item_short"
        android:visible="true"
        app:showAsAction="always">
        <menu>
            <group
                android:id="@+id/exclusive_checkable_group"
                android:checkableBehavior="single">
                <item
                    android:id="@+id/itemInSubMenu1"
                    android:checked="true"
                    android:title="@string/lates_added" />
                <item
                    android:id="@+id/itemInSubMenu2"
                    android:title="@string/top_readed" />
            </group>
        </menu>
    </item>
    <item
        android:id="@+id/action_new_book"
        android:orderInCategory="100"
        android:title="New Book"
        android:visible="false"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_new_author"
        android:orderInCategory="100"
        android:title="New Author"
        android:visible="false"
        app:showAsAction="never" />


    <item
        android:id="@+id/action_profile"
        android:orderInCategory="100"
        android:title="@string/menu_item_profile"
        android:visible="true"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_setting"
        android:orderInCategory="101"
        android:title="@string/menu_item_setting"
        android:visible="true"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_app"
        android:orderInCategory="101"
        android:title="@string/menu_item_app"
        android:visible="true"
        app:showAsAction="never" />
</menu>
