<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="4dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/default_photo"
                    android:layout_width="156dp"
                    android:layout_height="251dp"
                    android:background="@drawable/book_shadow"
                    android:layout_marginLeft="4dp"
                    android:paddingLeft="2dp"
                    android:paddingBottom="2dp"
                    android:adjustViewBounds="true"
                    android:scaleType="fitCenter"
                    android:src="@drawable/ic_no_image" />

                <RatingBar
                    android:id="@+id/ratingBar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="?android:attr/ratingBarStyleIndicator"
                    android:transformPivotX="52dp"
                    android:transformPivotY="26dp"
                    android:scaleX="0.8"
                    android:scaleY="0.8"
                    android:numStars="5"
                    android:stepSize="0.5"
                    android:rating="5"/>

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:textSize="10sp"
                    android:text="@string/stc_book"/>

                <TextView
                    android:id="@+id/book_name"
                    style="@style/TextAppearance.AppCompat.Medium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="17sp"
                    android:textStyle="bold"
                    tools:text="Book" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:layout_marginRight="10dp"
                    android:background="@color/separator_line" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:textSize="10sp"
                    android:text="@string/stc_author"/>

                <TextView
                    android:id="@+id/author_name"
                    style="@style/TextAppearance.AppCompat.Small"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:textSize="17sp"
                    tools:text="Author" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:layout_marginRight="10dp"
                    android:background="@color/separator_line" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:textSize="10sp"
                    android:text="@string/stc_publisher"/>

                <TextView
                    android:id="@+id/field_publisher"
                    style="@style/TextAppearance.AppCompat.Small"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    tools:text="Publisher" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:layout_marginRight="10dp"
                    android:background="@color/separator_line" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:textSize="10sp"
                    android:text="@string/stc_page"/>

                <TextView
                    android:id="@+id/field_page"
                    style="@style/TextAppearance.AppCompat.Small"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    tools:text="Page" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:layout_marginRight="10dp"
                    android:background="@color/separator_line" />

                <EditText
                    android:id="@+id/userNote"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="left|top"
                    android:clickable="true"
                    android:ellipsize="end"
                    android:textSize="16sp"
                    android:inputType="textMultiLine|textCapSentences"
                    android:cursorVisible="false"
                    android:lines="2"
                    android:hint="@string/hint_book_note"/>

            </LinearLayout>
        </LinearLayout>

        <at.blogc.android.views.ExpandableTextView
            android:id="@+id/post_body"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="2dp"
            android:maxLines="10"
            android:ellipsize="end"
            app:animation_duration="1000"
            android:textSize="16sp"
            tools:text="@string/lorem" />

        <TextView
            android:id="@+id/expand_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity= "center"
            android:background="?attr/selectableItemBackground"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:clickable="true"
            android:textAllCaps="false"
            android:textColor="@color/colorAccent"
            android:text="@string/expand_text"
            android:textSize="12sp"/>

    </LinearLayout>

</android.support.design.widget.CoordinatorLayout>
